stremio-jackett-cacher/service-stremio-jackett-cacher.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal
  namespace: stremio-jackett-cacher
  labels:
    app.kubernetes.io/name: stremio-jackett-cacher
  annotations:
spec:
  type: ClusterIP
  clusterIP: 10.43.0.4
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: stremio-jackett-cacher
