stremio-jackett-cacher/ingressroute-stremio-jackett-cacher.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stremio-jackett-cacher.${dns_domain}
  namespace: stremio-jackett-cacher
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stremio-jackett-cacher.${dns_domain}`)
      kind: Rule
      services:
        - name: stremio-jackett-cacher
          kind: Service
          port: 8080
      middlewares:  
        - name: error-pages
          namespace: traefik
        - name: rate-limit-stremio-jackett-cacher
